--- a/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
@@ -17,10 +17,13 @@
         <ng-container *ngIf="!isMailSent">
           <div class="form-group">
             <div class="input-with-icon">
-              <input formControlName="email" type="email" class="form-control" placeholder="Email Address" name="emailaddress">
+              <input formControlName="email" type="email" class="form-control" placeholder="Email Address" name="emailaddress" (click)="errorShow = false">
               <i class="fas fa-envelope"></i>
             </div>
             <app-control-messages [control]="f['email']"></app-control-messages>
+			<small class="text-danger ng-star-inserted" *ngIf="errorShow">
+				No User in this email address.
+			</small>		
           </div>
           <div class="form-group mt-3">
             <button [disabled]="!forgotPasswordForm.valid" type="submit" class="btn btn-theme-blue btn-block btn-lg">
