--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -236,14 +236,44 @@
 									{{item ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag): '--'}}{{last ? '' : ',&nbsp;'}}
 								</span>
 							 </span>
+							<button *ngIf="!postJobForm?.value?.requirement?.skills?.length || utilsHelperService.differenceByPropValArray(postJobForm?.value?.requirement?.skills, postJobForm?.value?.requirement?.hands_on_experience, 'skill_id').length==0 " style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('skills')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button>
 						</ng-container>
 						<ng-template #elseSkillsTemplate>
-						  <p>--</p>
+						  
+							<button *ngIf="!postJobForm?.value?.requirement?.skills?.length || utilsHelperService.differenceByPropValArray(postJobForm?.value?.requirement?.skills, postJobForm?.value?.requirement?.hands_on_experience, 'skill_id').length==0 " style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('skills')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button>
 						</ng-template>
 				  </li>
 				</ul>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4" *ngIf="!postJobForm?.value?.requirement?.skills || !postJobForm?.value?.requirement?.skills?.length || utilsHelperService.differenceByPropValArray(postJobForm?.value?.requirement?.skills, postJobForm?.value?.requirement?.hands_on_experience, 'skill_id').length==0 ">
+				<ul class="list-group">
+					<li class="list-group-item border-0 p-0  m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (click)="handleChange($event)" disabled   value="0"  id="customRadio9A" name="skills" formControlName="skills"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio9A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (click)="handleChange($event)" disabled  value="1"  id="customRadio9B" name="skills" formControlName="skills"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio9B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" (click)="handleChange($event)"  disabled  value="2"  id="customRadio9C" name="skills" formControlName="skills"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio9C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="col-lg-4" *ngIf="postJobForm?.value?.requirement?.skills?.length && utilsHelperService.differenceByPropValArray(postJobForm?.value?.requirement?.skills, postJobForm?.value?.requirement?.hands_on_experience, 'skill_id').length !=0 ">
 				<ul class="list-group">
 					<li class="list-group-item border-0 p-0  m-0 ">							
 						<div class="d-flex">
@@ -1173,6 +1203,36 @@
 			</div>	
 		</div>		
 	</div>	
+	<div class="modal-body"  *ngIf="skills">
+		<div class="col-lg-12 col-md-6" formGroupName="requirement">
+			<div class=" form-group">
+				<label>{{"dashboard.knowledgeOn" | translate }} </label>
+				<ngx-select
+					class="text-capitalize"
+					[placeholder]="'Select Other SAP Skills'"
+					[multiple]="true"					
+					[items]="skillsItems"
+					formControlName="skills"
+					optionValueField="id"
+					optionTextField="tags"
+					autoClearSearch="true"
+					noResultsFound="No results found"
+					>
+					 <ng-template ngx-select-option-selected let-option let-text="text">
+					  {{option?.text ? option?.text?.split('--')[0] : ''}}
+					</ng-template>
+
+					<ng-template ngx-select-option let-option let-text="text">
+						{{option?.text}}
+					</ng-template>
+
+					<ng-template ngx-select-option-not-found>
+						Nothing found
+					</ng-template>
+				</ngx-select>
+			</div>
+			</div>
+			</div>
 	<div class="modal-body"  *ngIf="education">
 		<div class="col-lg-12 col-md-6" formGroupName="requirement">
 			<div class=" form-group">
