--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -1218,6 +1218,11 @@
 					{{"dashboard.otherPreferences" | translate }}
 				 </h6>
 			</div>
+			<div class="pj-title" *ngIf="isMultipleMatches" >
+				<h6 class="mb-0" type="button">
+					
+				 </h6>
+			</div>
 		</div>
 		
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience==''">
