Job matches Issue Fixing

--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -27,8 +27,8 @@
 											</a>
 										</div>
 										<div class="float-right">
-											<button [ngClass]="{'applied-btn-green': (item?.is_job_applied ), 'btn-outline-green': !item?.is_job_applied}" [disabled]="item?.is_job_applied || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)" type="button" class="btn btn-sm" (click)="onToggleResumeSelectModal(true, item)"> <i class="fas fa-check"></i>
-												{{(item?.is_job_applied || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)) ? 'Applied' : 'Apply Now'}}
+											<button [ngClass]="{'applied-btn-green': (item?.is_job_applied ), 'btn-outline-green': !item?.is_job_applied}" [disabled]="item?.is_job_applied " type="button" class="btn btn-sm" (click)="onToggleResumeSelectModal(true, item)"> <i class="fas fa-check"></i>
+												{{(item?.is_job_applied ) ? 'Applied' : 'Apply Now'}}
 											</button>
 										</div>
 									</div>
